# ti.paint

./: .gitignore  .travis.yml  CLAUDE.md  README.md  changelog.md
.claude/: settings.local.json
android/: .classpath  .project  build.properties  build.properties.example  build.xml  manifest
android/assets/: README
android/documentation/: changelog.md  index.md  paintView.md
android/example/: app.js
android/lib/: README
android/src/ti/modules/titanium/paint/: PaintModule.java  PaintViewProxy.java  PathPaint.java  UIPaintView.java
example/: app.js
ios/: README  build.py  manifest  timodule.xml  titanium.xcconfig
ios/Classes/: TiPaintModule.h  TiPaintModule.m  TiPaintModuleAssets.h  TiPaintModuleAssets.m  TiPaintPaintView.h  TiPaintPaintView.m  TiPaintPaintViewProxy.h  TiPaintPaintViewProxy.m  TiPaintView.h  TiPaintView.m  TiPaintViewProxy.h  TiPaintViewProxy.m  WetPaintView.h  WetPaintView.m
ios/apidoc/: changelog.md  paintView.yml
ios/assets/: README
ios/documentation/: changelog.md  index.md  paintView.md
ios/example/: app.js
ios/paint.xcodeproj/: project.pbxproj
windows/: CMakeLists.txt  manifest  timodule.xml
windows/cmake/: FindHAL.cmake  FindJavascriptCore.cmake  FindLayoutEngine.cmake  FindTitaniumKit.cmake  FindTitaniumWindows_UI.cmake  TiPaint_Config.cmake
windows/documentation/: changelog.md  paintView.md
windows/example/: app.js
windows/include/: TiPaint.hpp  TiPaintView.hpp
windows/plugins/hooks/: windows.js
windows/src/: TiPaint.cpp  TiPaintView.cpp
windows/test/: CMakeLists.txt
